Add different envs

--- a/roles/devstack/templates/local-controller.conf.j2
+++ b/roles/devstack/templates/local-controller.conf.j2
@@ -6,7 +6,7 @@ FLAT_INTERFACE=ens3
 FIXED_RANGE=10.4.128.0/20
 FIXED_NETWORK_SIZE=4096
 FLOATING_RANGE=192.168.42.128/25
-ADMIN_PASSWORD=admin
+ADMIN_PASSWORD={{ devstack.admin_password }}
 DATABASE_PASSWORD=$ADMIN_PASSWORD
 RABBIT_PASSWORD=$ADMIN_PASSWORD
 SERVICE_PASSWORD=$ADMIN_PASSWORD
@@ -93,3 +93,4 @@ ENABLED_SERVICES+=,n-api,n-api-meta,n-cauth,n-crt,n-cpu,n-cond,n-sch,placement-a
 #
 #NEUTRON
 ENABLED_SERVICES+=,neutron,q-svc,q-agt,q-dhcp,q-l3,q-meta,q-lbaas
+LIBVIRT_TYPE=qemu
